--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,20 @@
     <string name="register_here_login">Register here</string>
     <string name="forgot_password_login">Forgot Password?</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_menu">menu</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="androide_1">\'@Androide_1</string>
+    <string name="menu_perfil">Perfil</string>
+    <string name="menu_comites">Comités</string>
+    <string name="menu_proyectos">Proyectos</string>
+    <string name="menu_solicitar_proyecto">Solicitar proyecto</string>
+
+
 </resources>
